Thursday, 8th May 2003, Ron Steinke

	* Missed bindings/perl/compile_flags.in. Note that
	  make distcheck will still not work when building
	  the perl bindings, since makemaker can't handle
	  having $(srcdir) and $(bindir) be different

Thursday, 8th May 2003, Ron Steinke

	* Added a dist-hook so the perl bindings make it into
	  the automake tarball
	* Fixed the way the perl bindings include the eris
	  headers to match the new way of doing things

Wednesday, 7th May 2003, James Turner <james@worldforge.org>

    * Updated README, INSTALL and AUTHORS in anticipation of
      a stable release fairly soon.

Tuesday, 6th May 2003, Ron Steinke

	* Further perl bindings build fixes

Tuesday, 6th May 2003, Ron Steinke

	* Fixed a problem with the perl bindings not getting
	  the atlas compile flags, generally cleaned up
	  the passing of those flags from autoconf to
	  the perl makemaker build system

Friday, 2nd May 2003, Al Riddoch

	* Move code from src subdir to Eris.

	* Add second .pc file for glib headers, sort out which version of glib
	  it depends on, and sort out to handle it in the rpm.

Tuesday, 22nd April 2003, James Turner

	* updated README / INSTALL to be up-to-date for the next
	  release, and converted to plain text (from Abiword)

Monday, 24th March 2003, Al Riddoch

	* src/Dispatcher.cpp: Handle missing TO on operations.

Monday, 24th March 2003, Al Riddoch

	* bindings/polls/glib/Makefile.am: Move bindings headers to the new
	  pkgconfig compliant header directory.

Saturday, 1st Febuary 2003, Al Riddoch

	* Convert to pkgconfig.

Friday, 31st January 2003, Al Riddoch

	* Fix Atlas-C++ compiled flags.

Thursday, 30th January 2003, Al Riddoch

	* src/Lobby.h: Make destructor virtual.

	* src/Room.cpp, src/Room.h: Simplify to one constructor.

	* src/World.cpp: Ensure talk dispatcher names are unique.

Monday, 16th December 2002, Ron Steinke

	* src/Avatar.h, src/BaseConnection.h, src/ClassDispatcher.h,